--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/intersect": "^6.1.3",
+    "@turf/union": "^6.0.3",
     "leaflet": "^1.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
