--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@turf/intersect": "^6.1.3",
     "@turf/union": "^6.0.3",
+    "firebase": "^5.1.0",
     "leaflet": "^1.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
