--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@turf/intersect": "^6.1.3",
+    "@turf/union": "^6.0.3",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3"
   },
