--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@turf/intersect": "^6.1.3",
     "@turf/union": "^6.0.3",
+    "cors": "^2.8.4",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3"
   },
