--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@turf/union": "^6.0.3",
     "firebase": "^5.1.0",
     "leaflet": "^1.3.1",
+    "pockito": "^0.1.15",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
